# train-game

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/: another_wheel.flac  chugga.flac  whistle.flac
src/: audio.rs  game.rs  main.rs  renderer.rs  words.rs
