[package]
edition = "2024"
license = "GPL-3.0-only"
name = "train-game"
version = "0.1.0"

[dependencies]
crossterm = "0.27.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rodio = { version = "0.22.1", default-features = false, features = ["playback", "claxon"] }

[profile.release]
opt-level = 3
lto = "thin"
